# codecomprehender

./: .gitignore  README.md  pyproject.toml
code_comprehender/: __init__.py  async_code_documenter.py  async_code_visualizer.py  async_llm_client.py  code_documenter.py  code_visualizer.py  config.py  git_handler.py  java_parser.py  llm_client.py  llm_presets.py  logger.py  main.py  prompts.py  repository_architecture_analyzer.py  repository_processor.py  token_counter.py
example/: Calculator.java
output/kitchensink/: processing_report.json
output/kitchensink/analysis/: ApplicationConfiguration_analysis.json  DatabaseSequence_analysis.json  Main_analysis.json  MemberController_analysis.json  MemberListProducer_analysis.json  MemberRegistrationIT_analysis.json  MemberRegistration_analysis.json  MemberRepository_analysis.json  MemberResourceRESTService_analysis.json  Member_analysis.json  MongoDBConfig_analysis.json  RemoteMemberRegistrationIT_analysis.json  Resources_analysis.json  repository_architecture_summary.json
output/kitchensink/documentation/src/main/java/org/jboss/as/quickstarts/kitchensink/: Main.java
output/kitchensink/documentation/src/main/java/org/jboss/as/quickstarts/kitchensink/config/: ApplicationConfiguration.java
output/kitchensink/documentation/src/main/java/org/jboss/as/quickstarts/kitchensink/controller/: MemberController.java
output/kitchensink/visualizations/: repository_architecture.html  repository_architecture_analysis.json
testing/: demo_repository_analysis.json  demo_repository_architecture.html  testkg.py
(+10 files in other folders)
