[project]
name = "code-comprehender"
version = "0.1.0"
description = "A CLI tool to automatically add comprehensive documentation to code using LLMs"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "javalang>=0.13.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "tiktoken>=0.5.2",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "graphviz>=0.20.0",
    "pyvis>=0.3.2",
]

[project.scripts]
code-comprehender = "code_comprehender.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_comprehender"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.12.0",
] 
